--- a/PlayableAegis/PlayableAegis.csproj
+++ b/PlayableAegis/PlayableAegis.csproj
@@ -28,6 +28,8 @@
       <PackageReference Include="R2API.Language" Version="1.0.0" />
       <PackageReference Include="R2API.Prefab" Version="1.0.1" />
       <PackageReference Include="R2API.RecalculateStats" Version="1.0.0" />
+      <PackageReference Include="R2API.DamageType" Version="1.0.0" />
+      <PackageReference Include="R2API.Loadout" Version="1.0.0" />
     </ItemGroup>
   
     <ItemGroup>
