--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
-	"name": "ModName",
+	"name": "PlayableAegis",
 	"version_number": "1.0.0",
-	"website_url": "",
-	"description": "ModDesc",
+	"website_url": "https://github.com/pseudopulse/PlayableAegis",
+	"description": "Aegis as a playable survivor.",
 	"dependencies": [
 		"bbepis-BepInExPack-5.4.9",
 		"RiskofThunder-HookGenPatcher-1.2.1",
@@ -10,6 +10,8 @@
 		"RiskofThunder-R2API_Core-5.0.4",
 		"RiskofThunder-R2API_Networking-1.0.2",
 		"RiskofThunder-R2API_Prefab-1.0.1",
-		"RiskofThunder-R2API_RecalculateStats-1.0.0"
+		"RiskofThunder-R2API_RecalculateStats-1.0.0",
+		"RiskofThunder-R2API_Loadout-1.0.0",
+		"RiskofThunder-R2API_DamageType-1.0.0"
 	]
 }
